more responsive headers fixes #11 overflow on iPhone

--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -47,6 +47,12 @@
 
 	h1{
 		@include swishheader;
+		@media screen and (max-width: $br-tablet){
+			font-size: 3.2em;
+		}
+		@media screen and (max-width: $br-mobile){
+			font-size: 2em;
+		}
 	}
 	@media screen and (max-width: $br-tablet){
 		float: none;
