--- a/sass/app.scss
+++ b/sass/app.scss
@@ -17,7 +17,6 @@ h1, h2, h3, h4, h5, h6, .caption{
 
 .top-bar,
 .site-title,
-.site-sub-title,
 .category-toggler,
 .cards,
 #searchsubmit{
@@ -189,18 +188,12 @@ h1.site-title{
 	padding: 15px 0;
 
 	width: auto;
-}
 
-.site-sub-title{
-	font-size: 4em;
-}
-
-// Scaling down the header for mobile screens
-@media screen and (max-width: 796px){
-	h1.site-title{
+	@media screen and (max-width: $br-tablet){
 		font-size: 4em;
 	}
-	.site-sub-title{
+
+	@media screen and (max-width: $br-mobile){
 		font-size: 2em;
 	}
 }
@@ -261,15 +254,13 @@ h1.site-title{
 
 	// Scaling header for smaller screens //
 	@media screen and (max-width: $br-fullwidth){
-		font-size: 4em;
-	}
-	@media screen and (max-width: $br-fullwidth){
 		font-size: 3.2em;
 	}
 	@media screen and (max-width: $br-mobile){
-		font-size: 3em;
+		font-size: 2em;
 	}
 }
+
 
 
 
