--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ body { font-family: Georgia, serif; font-size: 14px; }
 
 h1, h2, h3, h4, h5, h6, .caption { font-family: "aleo", "helvetica", arial, sans-serif; font-weight: bold; }
 
-.top-bar, .site-title, .site-sub-title, .category-toggler, .cards, #searchsubmit { font-family: "futura-alt", "futura medium", arial, sans-serif; text-transform: uppercase; font-weight: normal !important; }
+.top-bar, .site-title, .category-toggler, .cards, #searchsubmit { font-family: "futura-alt", "futura medium", arial, sans-serif; text-transform: uppercase; font-weight: normal !important; }
 
 b, strong { font-weight: bold; }
 
@@ -195,11 +195,9 @@ input:focus, select:focus, textarea:focus { outline-color: #498c34; }
 .site-header { text-align: right; }
 
 h1.site-title { font-size: 6em; font-weight: 500; line-height: 0.9em; text-align: center; margin: 0 auto; padding: 15px 0; width: auto; }
+@media screen and (max-width: 960px) { h1.site-title { font-size: 4em; } }
+@media screen and (max-width: 650px) { h1.site-title { font-size: 2em; } }
 
-.site-sub-title { font-size: 4em; }
-
-@media screen and (max-width: 796px) { h1.site-title { font-size: 4em; }
-  .site-sub-title { font-size: 2em; } }
 .social { position: absolute; left: 10px; top: 75px; }
 .social img { max-width: 25px; }
 @media screen and (max-width: 1200px) { .social { display: none; } }
@@ -213,9 +211,8 @@ h1.site-title { font-size: 6em; font-weight: 500; line-height: 0.9em; text-align
 .section-header { margin-bottom: 20px; }
 
 .section-title { font-family: Georgia, serif; font-size: 4em; font-weight: bold; font-style: italic; text-align: center; color: #498c34; margin: 0 auto; }
-@media screen and (max-width: 1200px) { .section-title { font-size: 4em; } }
 @media screen and (max-width: 1200px) { .section-title { font-size: 3.2em; } }
-@media screen and (max-width: 650px) { .section-title { font-size: 3em; } }
+@media screen and (max-width: 650px) { .section-title { font-size: 2em; } }
 
 .link-section, .link-section-mobile { padding: 0.5em; text-align: center; width: 100%; border-bottom: 1px #eeeeee solid; }
 
@@ -264,6 +261,8 @@ span.thumbnail-title { font-size: 1.5em; }
 
 .frontpage-cat-boxes { max-width: 1000px; margin: 0 auto; border-bottom: 1px #eeeeee solid; }
 .frontpage-cat-boxes h1 { font-family: Georgia, serif; font-size: 4em; font-weight: bold; font-style: italic; text-align: center; color: #498c34; }
+@media screen and (max-width: 960px) { .frontpage-cat-boxes h1 { font-size: 3.2em; } }
+@media screen and (max-width: 650px) { .frontpage-cat-boxes h1 { font-size: 2em; } }
 @media screen and (max-width: 960px) { .frontpage-cat-boxes { float: none; width: 100%; } }
 
 .cat-box { width: 32.5%; display: inline-block; vertical-align: top; }
